RESOLVED FIXED103145
[sh4] JavaScriptCore JIT build is broken for sh4 arch since r135330
https://bugs.webkit.org/show_bug.cgi?id=103145
Summary [sh4] JavaScriptCore JIT build is broken for sh4 arch since r135330
Julien Brianceau
Reported 2012-11-23 08:14:33 PST
Implementation of the following functions are missing from JavaScriptCore sh4 JIT since r135330: CodeLocationLabel startOfBranchPtrWithPatchOnRegister(CodeLocationDataLabelPtr label) void revertJumpReplacementToBranchPtrWithPatch(CodeLocationLabel instructionStart, RegisterID, void* initialValue) CodeLocationLabel startOfPatchableBranchPtrWithPatchOnAddress(CodeLocationDataLabelPtr) void revertJumpReplacementToPatchableBranchPtrWithPatch(CodeLocationLabel, Address, void*)
Attachments
Add missing implementation in SH4 JIT (since r135330) (3.69 KB, patch)
2012-11-26 08:39 PST, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2012-11-26 08:39:13 PST
Created attachment 176008 [details] Add missing implementation in SH4 JIT (since r135330)
WebKit Review Bot
Comment 2 2012-11-26 11:38:04 PST
Comment on attachment 176008 [details] Add missing implementation in SH4 JIT (since r135330) Clearing flags on attachment: 176008 Committed r135745: <http://trac.webkit.org/changeset/135745>
WebKit Review Bot
Comment 3 2012-11-26 11:38:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.